Adding starting configuration